Refactor mdsal-dom-inmemory-datastore
This patch refactors InMemoryDOMDataStore instantiation to require an
explicit DataTree{Configuration,Factory} and configuration parameters.

InMemoryDOMDataStoreFactory is refactored to make it a proper API
surface, with DataTreeFactory being injected into it.

Since this affects test wiring, we take the time to modernize it a bit
and share setup.

JIRA: MDSAL-909
Change-Id: I2c01d5a189aec6042ccd444f00ac87f51a70a861
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>